tests/valid/object-send.lua
local o = get("level2_muon_1")
o:send("hello")