tests/failing/tainted.lua
print(txt)
local cmd = "get" .. txt
print(cmd)
o1:interpret(cmd)